--- a/core/static/css/subject/student.css
+++ b/core/static/css/subject/student.css
@@ -4,52 +4,16 @@
 }
 
 .announcebox {
-    width: 950px;
+    width: 500px;
     border-top: 1px solid #e6e6e6;
 }
 
-.leftstud {
-    float: left;
-    max-width: 650px;
-    margin-top:10px;
+.incompletebox{
+    margin-top:25px;
 }
 
-.rightstud {
-    float: left;
-    padding-left: 20px;
-    margin-top:10px;
-}
-
-.performance {
-    margin-left: 25px;
-    margin-top: -5px;
-    position:relative;
-    z-index:2;
-    background-color:#e6e6e6 !important;
-    color:#000 !important;
-    border:1px solid #000;
-}
-
-.performance:hover {
-    background-color:#9F000F !important;
-    color:#fff !important;
-}
-
-.largecol {
-    min-width: 150px;
-}
-
-.regularcol {
-    min-width: 60px;
-}
-
-.perfchart {
-    width: 400px;
-    height: 680px;
-    margin-top: -70px;
-    margin-left:20px;
-    position:relative;
-    z-index:1;
+.gradedbox{
+    margin-top:-10px;
 }
 
 .incompletetable{
@@ -58,6 +22,39 @@
 
 .gradedtable{
     width:500px;
+}
+
+.leftstud {
+    float: left;
+    max-width: 650px;
+}
+
+.rightstud {
+    float: left;
+    padding-left: 50px;
+    width:400px;
+}
+
+.performance {
+    margin-left: 10px;
+    position:relative;
+    z-index:2;
+    background-color:#e6e6e6 !important;
+    color:#000 !important;
+    border:1px solid #000;
+}
+
+.performance:hover{
+    background-color:#000 !important;
+    color:#fff !important;
+}
+
+.perfchart {
+    width: 420px;
+    height: 970px;
+    margin-top: -80px;
+    position:relative;
+    z-index:1;
 }
 
 .chartimg{
