--- a/core/static/css/home/student.css
+++ b/core/static/css/home/student.css
@@ -31,7 +31,7 @@
 }
 
 .performance:hover {
-    background-color:#9F000F !important;
+    background-color:#000 !important;
     color:#fff !important;
 }
 
