--- a/core/templates/authenticated/settings/student.html
+++ b/core/templates/authenticated/settings/student.html
@@ -10,12 +10,20 @@
 {% block authenticated_body %}
     <div>
         <h3 class="header3">Account Settings</h3><br>
-        <h4 class="header4">Name : Sidhant Pai</h4><br>
-        <h4 class="header4">User ID : sidhantp</h4><br>
-        <h4 class="header4">Email ID : sidhantpai@gmail.com</h4><br>
-        <h4 class="header4">Class : 9 A</h4><br>
-        <h4 class="header4">School : Delhi Public School</h4><br>
-        <h4 class="header4">Class Teacher : Kalpita Mutalik</h4><br>
+        <h4 class="header4">Name : {{ user.first_name }} {{ user.last_name }}</h4><br>
+        <h4 class="header4">User ID : {{ user.username }}</h4><br>
+        <h4 class="header4">Email ID : {{ user.email }}</h4><br>
+        <h4 class="header4">Class : {{ vm.authenticated_body.classroom }}</h4><br>
+        <h4 class="header4">School : {{ vm.authenticated_body.school }}</h4><br>
+        <h4 class="header4">Class Teacher : {{ vm.authenticated_body.class_teacher }}</h4><br>
+        <h4 class="header4">Parents :
+            {% if vm.authenticated_body.parents %}
+                {{ vm.authenticated_body.parents|join:", " }}
+            {% else %}
+                None registered
+            {% endif %}
+        </h4><br>
+
         <div class="largebutton floatleft">Change Password</div>
         <div class="largebutton secondbutton floatleft">Change Email ID</div>
     </div>
