assignments + assignment_id views setup data for test questions, assignment
schema migrations to allow many-to-many for subChapters-to-questions

--- a/core/templates/register.html
+++ b/core/templates/register.html
@@ -15,13 +15,13 @@
         <div class="regdiv">
             <!--- Start Code for Registration ---->
 
-            {% if user_form.errors or user_info_form.errors %}
+            {% if user_creation_form.errors or user_info_form.errors %}
                 {#  We use a custom error message as there are no non_field_errors for the registration form  #}
                 <p class="errmsg_cumulative">Registration failed. Please fix the errors below and try again.</p>
             {% endif %}
 
             <form action="{% url 'register' %}" method="post">{% csrf_token %}
-                {% for field in user_form %}
+                {% for field in user_creation_form %}
                     {% include "form_field.html" %}
                 {% endfor %}
                 {% for field in user_info_form %}
