Standardizing image size

--- a/hwcentral/templates/about.html
+++ b/hwcentral/templates/about.html
@@ -13,7 +13,7 @@
     <hr class="section-divider">
 
     <div class="featurette">
-        <img class="left-align" src="{% static 'img/Sharang.jpg' %}">
+        <img class="left-align" src="{% static 'img/Sharang.jpg' %}" height="100px" width="100px">
 
         <h3>Sharang Pai</h3>
 
@@ -25,7 +25,7 @@
     <hr class="featurette-divider">
 
     <div class="featurette">
-        <img class="left-align" src="{% static 'img/Oasis.jpg' %}">
+        <img class="left-align" src="{% static 'img/Oasis.jpg' %}" height="100px" width="100px">
 
         <h3>Oasis Vali</h3>
 
@@ -37,7 +37,7 @@
     <hr class="featurette-divider">
 
     <div class="featurette">
-        <img class="left-align" src="{% static 'img/Sidhant.jpg' %}">
+        <img class="left-align" src="{% static 'img/Sidhant.jpg' %}" height="100px" width="100px">
 
         <h3>Sidhant Pai</h3>
 
