--- a/core/templates/authenticated/assignments/student.html
+++ b/core/templates/authenticated/assignments/student.html
@@ -2,10 +2,7 @@
 
 {% load staticfiles %}
 
-{% block authenticated_body_css %}
-    <link rel="stylesheet" href="{% static "css/scrolltables.css" %}" type="text/css"/>
-    <link rel="stylesheet" href="{% static "css/common.css" %}" type="text/css"/>
-{% endblock authenticated_body_css %}
+{% block authenticated_body_css %}{% endblock authenticated_body_css %}
 
 {% block authenticated_body %}
     <div>
