--- a/core/templates/authenticated/settings/passwordemail_change.html
+++ b/core/templates/authenticated/settings/passwordemail_change.html
@@ -1,2 +1,8 @@
-<div class="largebutton floatleft">Change Password</div>
-<div class="largebutton secondbutton floatleft">Change Email ID</div>
+<div id="changeactions">
+<div class="largebutton floatleft largesizedbutton">
+	<div class="buttonlabel">Change Password</div>
+</div>
+<div class="largebutton nextbutton floatleft largesizedbutton">
+	<div class="buttonlabel">Change Email-ID</div>
+</div>
+</div>
