--- a/core/templates/authenticated/settings/base.html
+++ b/core/templates/authenticated/settings/base.html
@@ -2,17 +2,19 @@
 
 {% load staticfiles %}
 
-{% block authenticated_body_css %}{% endblock authenticated_body_css %}
+{% block authenticated_body_css %}
+    <link rel="stylesheet" href="{% static "css/settings.css" %}" type="text/css"/>
+{% endblock authenticated_body_css %}
 
 {% block authenticated_body %}
     <div>
         <h3 class="header3">Account Settings</h3><br>
     </div>
     <div>    
-        {% include "authenticated/settings/common_account.html"};
+        {% include "authenticated/settings/common_account.html" %}
         {% block customdata %}
         {% endblock %}
-        {% include "authenticated/settings/passwordemail_change.html"}
+        {% include "authenticated/settings/passwordemail_change.html" %}
     </div>
     <br>
 
