working parent and student sidebar with html updates

--- a/core/templates/authenticated/home/parent.html
+++ b/core/templates/authenticated/home/parent.html
@@ -1,7 +1,9 @@
 {% extends "authenticated/base.html" %}
 
 {% load staticfiles %}
-
+{{% block sidebar %}
+        {% include "authenticated/sidebar/parent.html" %}
+{% endblock %}
 {% block authenticated_body_css %}
     <link rel="stylesheet" href="{% static "css/home/student.css" %}" type="text/css"/>
 {% endblock authenticated_body_css %}
