--- a/core/templates/authenticated/sidebar/parent_child.html
+++ b/core/templates/authenticated/sidebar/parent_child.html
@@ -1,3 +1,4 @@
 {% include "authenticated/sidebar/parent_child_header.html" %}
-{% include "authenticated/sidebar/ticker.html" %}
-{% include "authenticated/sidebar/listings.html" %}
+{% include "authenticated/sidebar/ticker.html" with sidebar_info=parent_child.child_sidebar_info %}
+{% include "authenticated/sidebar/listings.html" with sidebar_info=parent_child.child_sidebar_info%}
+
