--- a/core/templates/authenticated/sidebar/parent_child_header.html
+++ b/core/templates/authenticated/sidebar/parent_child_header.html
@@ -1,4 +1,5 @@
 <div class="childinfo">
-    <div>{{ user.child.first_name }} {{ user.child.last_name }}</div>
-    <div> {{user.child.class}} {{user.child.section}} </div>
+
+    <div>{{ parent_child.child.first_name}} {{ parent_child.child.last_name }}</div>
+    <div> {{parent_child.child.standard}} {{parent_child.child.division}} </div>
 </div>
