--- a/core/templates/authenticated/base.html
+++ b/core/templates/authenticated/base.html
@@ -18,7 +18,7 @@
 
     {% block sidebar %}
         {% include "authenticated/sidebar/base.html" %}
-    {% endblock sidebar %}
+    {% endblock %}
 
     <div id="authenticated_body">
         {% block authenticated_body %}{% endblock authenticated_body %}
