--- a/core/templates/authenticated/sidebar/ticker.html
+++ b/core/templates/authenticated/sidebar/ticker.html
@@ -1,4 +1,4 @@
 <div class="ticker_box">
-    <div class="ticker"><!---{{ vm.sidebar.ticker.label }} --> Assignments To Do</div>
-   	<div class="tickerval"><a href="{% url vm.sidebar.ticker.urlname %}">{{ vm.sidebar.ticker.value }}</a>
+    <div class="ticker"><!---{{ sidebar_info.ticker.label }} --> Assignments To Do</div>
+   	<div class="tickerval"><a href="{% url sidebar_info.ticker.urlname %}">{{ sidebar_info.ticker.value }}</a></div>
 </div>
