--- a/core/static/css/common.css
+++ b/core/static/css/common.css
@@ -1,4 +1,14 @@
 /* Headers */
+.header5 {
+    font-family: Georgia, serif;
+    color: #4E443C;
+    font-variant: small-caps;
+    text-transform: none;
+    font-weight: 100;
+    margin-bottom: 0;
+    font-size: 16px;
+}
+
 
 .header4 {
     font-family: Georgia, serif;
