Settings page for teacher

--- a/core/templates/authenticated/settings/parent.html
+++ b/core/templates/authenticated/settings/parent.html
@@ -1,10 +1,10 @@
 % extends "authenticated/settings/base.html" %}
 
 {% block customdata %}
-	<h4 class="header4"> Children:
-    	{% for child in vm.childlist}
-   			<div>First Name: {{ vm.authenticated_child_body_firstname }} Last Name: {{ vm.authenticated_child_body_lastname }} </div><br>
-    		<div>Class: {{ vm.authenticated_child_body.class }} Class: {{ vm.authenticated_child_body.sec}}</div><br>
-   	{% endfor %}
-</h4>
+  <h4 class='header4'> Children:
+    	{% for child in vm.childlist %}
+    		<div>First Name: {{ vm.authenticated_child_body_firstname }} Last Name: {{ vm.authenticated_child_body_lastname }} </div><br>
+    		<div>Class: {{ vm.authenticated_child_body.class }} Sec: {{ vm.authenticated_child_body.section}}</div><br>
+    	{% endfor %}
+	</h4>
 {% endblock %}
