--- a/core/templates/authenticated/home/parent.html
+++ b/core/templates/authenticated/home/parent.html
@@ -1,11 +1,12 @@
 {% extends "authenticated/base.html" %}
 
 {% load staticfiles %}
-{{% block sidebar %}
+{% block sidebar %}
         {% include "authenticated/sidebar/parent.html" %}
 {% endblock %}
 {% block authenticated_body_css %}
-    <link rel="stylesheet" href="{% static "css/home/student.css" %}" type="text/css"/>
+    <link rel="stylesheet" href="{% static "css/home/base.css" %}" type="text/css"/>
+    <link rel="stylesheet" href="{% static "css/home/parent.css" %}" type="text/css"/>
 {% endblock authenticated_body_css %}
 
 {% block authenticated_body %}
@@ -138,5 +139,5 @@
 
 {% block js %}
     <script type="text/javascript" src="https://www.google.com/jsapi"></script>
-    <script type="text/javascript" src="{% static "js/charts/student_home.js" %}"></script>
+    <script type="text/javascript" src="{% static "js/charts/base_home.js" %}"></script>
 {% endblock js %}
