--- a/core/templates/authenticated/sidebar/teacher.html
+++ b/core/templates/authenticated/sidebar/teacher.html
@@ -1,8 +1,8 @@
 {% extends "authenticated/sidebar/base.html" %}
 {% block sidebar_content %} 
 	<div> <h5 class="header5">Class Rooms:</h5><br>
-		{% for classroom in vm.classroomlist %}
-			<div> {{vm.classroom.class}} {{vm.classroom.section}} </div>
+		{% for Classrooms in vm.sidebar.listings %}
+			<div> {{listings.title}} {{classroom.Sections}} </div>
 		{% endfor %}
 	</div>
 	<div> <h5 class="header5">Subject Rooms:</h5><br>
