--- a/core/templates/authenticated/sidebar/admin.html
+++ b/core/templates/authenticated/sidebar/admin.html
@@ -1,1 +1,6 @@
 {% extends "authenticated/sidebar/base.html" %}
+{% block sidebar-content %}
+	{% for classroom in vm.sidebar.classroomlist %}
+		{% include "authenticated/sidebar/classroom.html" %}
+	{% endfor %}
+{% endblock %}
